openfgdb4j/native/include/openfgdb_c_api.h

OFGDB_API int ofgdb_row_get_int32(uint64_t row_handle, const char *column_name, int32_t *out_value);
OFGDB_API int ofgdb_row_get_double(uint64_t row_handle, const char *column_name, double *out_value);
OFGDB_API int ofgdb_row_get_blob(uint64_t row_handle, const char *column_name, uint8_t **out_data, int32_t *out_size);
OFGDB_API int ofgdb_row_get_geometry(uint64_t row_handle, uint8_t **out_wkb, int32_t *out_size);
OFGDB_API const char *ofgdb_last_error_message(void);
OFGDB_API void ofgdb_free_string(char *value);