openfgdb4j/src/generated/java/ch/ehi/openfgdb4j/ffm/OpenFgdbNative.java


    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int ofgdb_row_get_int32(uint64_t row_handle, const char *column_name, int32_t *out_value)
     * }
     */
    public static FunctionDescriptor ofgdb_row_get_int32$descriptor() {
        return ofgdb_row_get_int32.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int ofgdb_row_get_int32(uint64_t row_handle, const char *column_name, int32_t *out_value)
     * }
     */
    public static MethodHandle ofgdb_row_get_int32$handle() {
        return ofgdb_row_get_int32.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int ofgdb_row_get_int32(uint64_t row_handle, const char *column_name, int32_t *out_value)
     * }
     */
    public static MemorySegment ofgdb_row_get_int32$address() {
        return ofgdb_row_get_int32.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int ofgdb_row_get_int32(uint64_t row_handle, const char *column_name, int32_t *out_value)
     * }
     */
    public static int ofgdb_row_get_int32(long row_handle, MemorySegment column_name, MemorySegment out_value) {
        var mh$ = ofgdb_row_get_int32.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("ofgdb_row_get_int32", row_handle, column_name, out_value);
            }
            return (int)mh$.invokeExact(row_handle, column_name, out_value);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class ofgdb_row_get_double {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            OpenFgdbNative.C_INT,
            OpenFgdbNative.C_LONG_LONG,
            OpenFgdbNative.C_POINTER,
            OpenFgdbNative.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.find("ofgdb_row_get_double").orElseThrow(() -> new IllegalStateException("Native symbol not found: ofgdb_row_get_double"));

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int ofgdb_row_get_double(uint64_t row_handle, const char *column_name, double *out_value)
     * }
     */
    public static FunctionDescriptor ofgdb_row_get_double$descriptor() {
        return ofgdb_row_get_double.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int ofgdb_row_get_double(uint64_t row_handle, const char *column_name, double *out_value)
     * }
     */
    public static MethodHandle ofgdb_row_get_double$handle() {
        return ofgdb_row_get_double.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int ofgdb_row_get_double(uint64_t row_handle, const char *column_name, double *out_value)
     * }
     */
    public static MemorySegment ofgdb_row_get_double$address() {
        return ofgdb_row_get_double.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int ofgdb_row_get_double(uint64_t row_handle, const char *column_name, double *out_value)
     * }
     */
    public static int ofgdb_row_get_double(long row_handle, MemorySegment column_name, MemorySegment out_value) {
        var mh$ = ofgdb_row_get_double.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("ofgdb_row_get_double", row_handle, column_name, out_value);
            }
            return (int)mh$.invokeExact(row_handle, column_name, out_value);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class ofgdb_row_get_blob {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            OpenFgdbNative.C_INT,
            OpenFgdbNative.C_LONG_LONG,
            OpenFgdbNative.C_POINTER,
            OpenFgdbNative.C_POINTER,
            OpenFgdbNative.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.find("ofgdb_row_get_blob").orElseThrow(() -> new IllegalStateException("Native symbol not found: ofgdb_row_get_blob"));

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int ofgdb_row_get_blob(uint64_t row_handle, const char *column_name, uint8_t **out_data, int32_t *out_size)
     * }
     */
    public static FunctionDescriptor ofgdb_row_get_blob$descriptor() {
        return ofgdb_row_get_blob.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int ofgdb_row_get_blob(uint64_t row_handle, const char *column_name, uint8_t **out_data, int32_t *out_size)
     * }
     */
    public static MethodHandle ofgdb_row_get_blob$handle() {
        return ofgdb_row_get_blob.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int ofgdb_row_get_blob(uint64_t row_handle, const char *column_name, uint8_t **out_data, int32_t *out_size)
     * }
     */
    public static MemorySegment ofgdb_row_get_blob$address() {
        return ofgdb_row_get_blob.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int ofgdb_row_get_blob(uint64_t row_handle, const char *column_name, uint8_t **out_data, int32_t *out_size)
     * }
     */
    public static int ofgdb_row_get_blob(long row_handle, MemorySegment column_name, MemorySegment out_data, MemorySegment out_size) {
        var mh$ = ofgdb_row_get_blob.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("ofgdb_row_get_blob", row_handle, column_name, out_data, out_size);
            }
            return (int)mh$.invokeExact(row_handle, column_name, out_data, out_size);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class ofgdb_row_get_geometry {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            OpenFgdbNative.C_INT,
            OpenFgdbNative.C_LONG_LONG,
            OpenFgdbNative.C_POINTER,
            OpenFgdbNative.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.find("ofgdb_row_get_geometry").orElseThrow(() -> new IllegalStateException("Native symbol not found: ofgdb_row_get_geometry"));

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int ofgdb_row_get_geometry(uint64_t row_handle, uint8_t **out_wkb, int32_t *out_size)
     * }
     */
    public static FunctionDescriptor ofgdb_row_get_geometry$descriptor() {
        return ofgdb_row_get_geometry.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int ofgdb_row_get_geometry(uint64_t row_handle, uint8_t **out_wkb, int32_t *out_size)
     * }
     */
    public static MethodHandle ofgdb_row_get_geometry$handle() {
        return ofgdb_row_get_geometry.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int ofgdb_row_get_geometry(uint64_t row_handle, uint8_t **out_wkb, int32_t *out_size)
     * }
     */
    public static MemorySegment ofgdb_row_get_geometry$address() {
        return ofgdb_row_get_geometry.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int ofgdb_row_get_geometry(uint64_t row_handle, uint8_t **out_wkb, int32_t *out_size)
     * }
     */
    public static int ofgdb_row_get_geometry(long row_handle, MemorySegment out_wkb, MemorySegment out_size) {
        var mh$ = ofgdb_row_get_geometry.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("ofgdb_row_get_geometry", row_handle, out_wkb, out_size);
            }
            return (int)mh$.invokeExact(row_handle, out_wkb, out_size);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class ofgdb_last_error_message {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            OpenFgdbNative.C_POINTER    );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.find("ofgdb_last_error_message").orElseThrow(() -> new IllegalStateException("Native symbol not found: ofgdb_last_error_message"));

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * const char *ofgdb_last_error_message()
     * }
     */
    public static FunctionDescriptor ofgdb_last_error_message$descriptor() {
        return ofgdb_last_error_message.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * const char *ofgdb_last_error_message()
     * }
     */
    public static MethodHandle ofgdb_last_error_message$handle() {
        return ofgdb_last_error_message.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * const char *ofgdb_last_error_message()
     * }
     */
    public static MemorySegment ofgdb_last_error_message$address() {
        return ofgdb_last_error_message.ADDR;
    }

    /**
     * {@snippet lang=c :
     * const char *ofgdb_last_error_message()
     * }
     */
    public static MemorySegment ofgdb_last_error_message() {
        var mh$ = ofgdb_last_error_message.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("ofgdb_last_error_message");
            }
            return (MemorySegment)mh$.invokeExact();
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class ofgdb_free_string {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            OpenFgdbNative.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.find("ofgdb_free_string").orElseThrow(() -> new IllegalStateException("Native symbol not found: ofgdb_free_string"));

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void ofgdb_free_string(char *value)
     * }
     */
    public static FunctionDescriptor ofgdb_free_string$descriptor() {
        return ofgdb_free_string.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void ofgdb_free_string(char *value)
     * }
     */
    public static MethodHandle ofgdb_free_string$handle() {
        return ofgdb_free_string.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * void ofgdb_free_string(char *value)
     * }
     */
    public static MemorySegment ofgdb_free_string$address() {
        return ofgdb_free_string.ADDR;
    }
